--- a/web/themes/citizen_patterns/components/_patterns/05-assembly/_site-styles.scss
+++ b/web/themes/citizen_patterns/components/_patterns/05-assembly/_site-styles.scss
@@ -308,7 +308,7 @@ body {
 		img {
 			display: block;
 		}
-		figcaption,.field-caption {
+		.field-caption {
 			position: absolute;
 			bottom: 0;
 			left: 0;
