--- a/web/themes/citizen_patterns/components/_patterns/01-parts/02-typography/_typography.scss
+++ b/web/themes/citizen_patterns/components/_patterns/01-parts/02-typography/_typography.scss
@@ -278,7 +278,7 @@ strong{
 	font-weight: $heavy;
 }
 
-figcaption,.field-caption {
+.field-caption {
 	text-align: center;
 	font-size: 1.5rem;
 	font-style: italic;
