--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/06-image/_image.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/06-image/_image.scss
@@ -6,36 +6,35 @@
 
 	//Wrapper sizing (needs to be changed when image styles are changed or added to widget)
 	.image-wrapper{
-		max-width: $contentStop;
 		@include auto;
 		&.small{
-			max-width: 300px;
-		}
-		&.square{
-			max-width: 350px;
+			max-width: 400px;
 		}
 		&.medium{
-			max-width: 500px;
+			max-width: 600px;
 		}
 		&.large{
-			max-width: 800px;
-			.layout:not(.layout--twocol-sidebar) &{
-				max-width: 100%;
+			max-width: 900px;
+		}
+		&.default{
+			img{
+				width: auto;
+				@include auto;
 			}
 		}
 	}
 	
-	figcaption{
-		text-align: center;
-		cursor: default;
-	}
-
-
 	//hover action when link
-	a:hover{
-		text-decoration: none;
+	a{
+		color: $baseText;
 		img{
-			@include imageHover;
+			border: 1px solid transparent;
+		}
+		&:hover{
+			text-decoration: none;
+			img{
+				@include imageHover;
+			}
 		}
 	}
 	
