--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-pullquote/pullquote.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-pullquote/pullquote.twig
@@ -1,29 +1,31 @@
 {#
-	DRUPAL: This template is embedded into the Drupal pullquote paragraph template.
+	STYLEGUIDE:
 #}
 
-{{ quote_instructions }}
-{% block plwidgetopen %}
-	<div class="paragraph paragraph--type--pullquote">
-{% endblock %}
+{% embed '@composites/02-paragraphs/00-base/_paragraphs-field-item.twig' %}
+  {% block paragraphItem %}
+    {% embed '@composites/02-paragraphs/00-base/_paragraph.twig' 
+      with{
+        sectionTitle: '',
+        sectionIntro: '',
+      }
+    %}
 
-	{% if widget_title %}
-		<div class="widget-title">{{widget_title}}</div>
-	{% endif %}
+    	{% block widgetContent %}
+    		{% if quote %}
+    			{% autoescape false %}
+    				<div class="field field-quote text-long">
+	    				{{- quote -}}
+	    			</div>
+    			{% endautoescape %}
+    		{% endif %}
+    		{% if source %}
+    			<div class="field field-source string">
+    				{{- source -}}
+    			</div>
+    		{% endif %}
+    	{% endblock %}
 
-	{% block quoteContent %}
-		{% if quote %}
-			<div class="field field-quote">
-				{{ quote }}
-			</div>
-		{% endif %}
-		{% if source %}
-			<div class="field field-source">
-				{{ source }}
-			</div>
-		{% endif %}
-	{% endblock %}
-				
-{% block plwidgetclose %}
-	</div>
-{% endblock %}
+    {% endembed %}
+  {% endblock %}
+{% endembed %}
