Readd pull quote as plain text, update quote and text widgets in PL

--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-pullquote/pullquote.twig
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-pullquote/pullquote.twig
@@ -1,5 +1,5 @@
 {#
-	STYLEGUIDE:
+	STYLEGUIDE ONLY
 #}
 
 {% embed '@composites/02-paragraphs/00-base/_paragraphs-field-item.twig' %}
@@ -15,7 +15,7 @@
     		{% if quote %}
     			{% autoescape false %}
     				<div class="field field-quote text-long">
-	    				{{- quote -}}
+	    				{{ quote }}
 	    			</div>
     			{% endautoescape %}
     		{% endif %}
