--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-quote/_quote.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-quote/_quote.scss
@@ -1,5 +1,5 @@
 /* ================
-	PULLQUOTE WIDGET
+	QUOTE WIDGET
 ======================= */
 .paragraph--type--pullquote{
 	.layout:not(.layout--twocol-sidebar) &{
