--- a/web/themes/citizen_patterns/components/_patterns/05-assembly/02-styleguide/styleguide.scss
+++ b/web/themes/citizen_patterns/components/_patterns/05-assembly/02-styleguide/styleguide.scss
@@ -653,6 +653,13 @@ $subGroupHeaderBack  : $darkGrey;
 //global
 .paragraphs-layout{
 	padding: 0 20px;
+	max-width: $contentStop + 40px;
+	@include auto;
+}
+#composites-section{
+	.paragraphs-layout{
+		max-width: 100%;
+	}
 }
 
 //links & files
@@ -699,6 +706,27 @@ $subGroupHeaderBack  : $darkGrey;
 	}
 }//end gallery
 
+//video
+.paragraph--type--video{
+	.video-embed-field-responsive-video{
+		position: relative;
+		&:after{
+			content: '';
+			display: block;
+			padding-bottom: 56.25%;
+		}
+		iframe{
+			position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			margin: 0;
+		}
+	}
+}//end video
 
 
 
