--- a/web/themes/citizen_patterns/components/_patterns/04-units/01-dashboard/_dashboard.scss
+++ b/web/themes/citizen_patterns/components/_patterns/04-units/01-dashboard/_dashboard.scss
@@ -282,12 +282,14 @@
 
 /* CONTENT VIEWS
 -------------------- */
+.user-dashboard .layout--tabs .layout__region--tabs{
+	.tab-item{
+		padding-top: 0;
+	}
+}
 .views-block.block-user-dashboard{
 	@include onlyMobile{
 		padding-top: 1rem;
-	}
-	h2.block-title{
-		display: none;
 	}
 	.view-empty{
 		padding-top: $spaceLg;
