Fix incorrect folder number in nav, add back to top to pl, absract node regions, finish block post in pl

--- a/web/themes/citizen_patterns/components/_patterns/00-base/_01-mixins.scss
+++ b/web/themes/citizen_patterns/components/_patterns/00-base/_01-mixins.scss
@@ -386,6 +386,13 @@
 	margin-right: 0;
 }
 
+@mixin textConstrain{
+	.layout:not(.layout--twocol-sideleft):not(.layout--twocol-sideright) &{
+		max-width: $textMax;
+		@include auto;
+	}
+}
+
 // clear floats (used on parent container)
 @mixin clearFix {
 	&::after {
