--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/02-block-placer/_block-placer.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/02-block-placer/_block-placer.scss
@@ -4,10 +4,7 @@
 .paragraph--type--block-placer{
 	.field-block{
 		.field.body{
-			.layout:not(.layout--twocol-sidebar) &{
-				max-width: $textMax;
-				@include auto;
-			}
+			@include textConstrain;
 		}
 	}
 }//end paragraph-block-placer
