--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/03-form/_form.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/03-form/_form.scss
@@ -3,8 +3,5 @@
 ================ */
 
 .paragraph--type--form{
-	.layout:not(.layout--twocol-sidebar) &{
-		max-width: $textMax;
-		@include auto;
-	}
+	@include textConstrain;
 }//end form widget
