--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-quote/_quote.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/08-quote/_quote.scss
@@ -2,10 +2,7 @@
 	QUOTE WIDGET
 ======================= */
 .paragraph--type--pullquote{
-	.layout:not(.layout--twocol-sidebar) &{
-		max-width: $textMax;
-		@include auto;
-	}
+	@include textConstrain;
 	.widget-title{
 		margin-bottom: $spaceMd;
 	}
