--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/09-text/_text.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/09-text/_text.scss
@@ -2,9 +2,6 @@
    TEXT WIDGET
 ================= */
 .paragraph--type--text{
-	.layout:not(.layout--twocol-sidebar) &{
-		max-width: $textMax;
-		@include auto;
-	}
+	@include textConstrain;
 }//end links-files widget
 
