--- a/web/themes/citizen_patterns/templates/zzz-custom/fields/field--node--title.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/fields/field--node--title.html.twig
@@ -23,5 +23,5 @@
 {% extends 'field.html.twig' %}
 
 {% block fieldSingleNo %}
-	<h1{{ attributes }}>{{- element.0['#context'].value -}}</h1>
+	<h1 class="page-title">{{- element.0['#context'].value -}}</h1>
 {% endblock %}
