--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/01-accordion/_accordion.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/01-accordion/_accordion.scss
@@ -3,10 +3,7 @@
 ================= */
 
 .paragraph--type--accordion-group{
-	.layout:not(.layout--twocol-sidebar) &{
-		max-width: $textMax;
-		@include auto;
-	}
+	@include textConstrain;
 }
 
 
