--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/05-horizontal-rule/_horizontal-rule.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/05-horizontal-rule/_horizontal-rule.scss
@@ -3,10 +3,7 @@
 ==================== */
 
 .paragraph--type--horizontal-rule{
-	.layout:not(.layout--twocol-sidebar) &{
-		max-width: $textMax;
-		@include auto;
-	}
+	@include textConstrain;
 	hr{
 		border-top: 1px solid $borderRule;
 	}
