--- a/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/07-links-files/_links-files.scss
+++ b/web/themes/citizen_patterns/components/_patterns/03-composites/02-paragraphs/07-links-files/_links-files.scss
@@ -3,10 +3,7 @@
 ================== */
 
 .paragraph--type--links-files{
-	.layout:not(.layout--twocol-sidebar) &{
-		max-width: $textMax;
-		@include auto;
-	}
+	@include textConstrain;
 	//set margins for links and files lists
 	.links-files{
 		margin-top: 2rem;
