--- a/web/themes/citizen_patterns/templates/zzz-custom/fields/blog/field--node--title--blog.html.twig
+++ b/web/themes/citizen_patterns/templates/zzz-custom/fields/blog/field--node--title--blog.html.twig
@@ -23,13 +23,13 @@
 {% extends 'field.html.twig' %}
 
 {% block fieldSingleNo %}
-<h1{{ attributes }}>
+<h1 class="page-title">
 	{{- element.0['#context'].value -}}
 </h1>
 <div class="metatext">
 	<span class="date">{{- element['#object'].created.value|date("F j, Y") -}}</span>
-	{%- if author -%}
-		<span class="author"> by {{- element['#object'].field_author.entity.title.value -}}</span>
+	{%- if element['#object'].field_author -%}
+		<span class="author"> by {{ element['#object'].field_author.entity.title.value -}}</span>
 	{%- endif -%}
 </div>
 {% endblock %}
