--- a/web/themes/crane/scss/base/_01-colors.scss
+++ b/web/themes/crane/scss/base/_01-colors.scss
@@ -93,3 +93,7 @@ $oddRowText          : $black;
 $evenRowBack         : $siteBack;
 $evenRowText         : $black;
 $rowSelectedBack     : $whiteGold;
+
+/* FRONT-END COLORS */
+// section backgrounds
+$sectionGrey  :  #ededed;
