--- a/web/themes/crane/templates/paragraphs/paragraph--preview.html.twig
+++ b/web/themes/crane/templates/paragraphs/paragraph--preview.html.twig
@@ -42,6 +42,7 @@
   set classes = [
     'paragraph',
     'paragraph--type--' ~ paragraph.bundle|clean_class,
+    content.field_layout.0['#markup'] ? 'section-' ~ content.field_layout.0['#markup']|clean_class,
     view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
     not paragraph.isPublished() ? 'paragraph--unpublished'
   ]
