Refactor custom module: ec_preview to citizen_preview.

--- a/web/modules/custom/citizen_preview/css/citizen_preview.css
+++ b/web/modules/custom/citizen_preview/css/citizen_preview.css
@@ -48,12 +48,12 @@
 }
 
 /* CUSTOM PREVIEW BUTTON ON NODE */
-#edit-ec-preview {
+#edit-citizen-preview {
   background: #018901;
   color: #ffffff;
   min-width: 120px;
 }
-#edit-ec-preview:hover,#edit-ec-preview:focus{
+#edit-citizen-preview:hover,#edit-citizen-preview:focus{
 	background: #ccc;
 	color: #121212;
 }
